--- a/S_Algorithm.ipynb
+++ b/S_Algorithm.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPkXaFyq44x2i6qFfFojf6j",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,21 +15,10 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Himanshi5114/ML-Lab/blob/main/S_Algorithm.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "from google.colab import files\n",
-        "uploaded = files.upload()\n",
-        ""
+        "uploaded = files.upload()\n"
       ],
       "metadata": {
         "colab": {
@@ -41,7 +28,7 @@
         "id": "NK4Zyz29a9NK",
         "outputId": "7d531cd3-3f25-421e-8038-46edd912e102"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -250,13 +237,12 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "import numpy as np\n",
-        ""
+        "import numpy as np\n"
       ],
       "metadata": {
         "id": "LZ8NwfRudCXa"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,7 +253,7 @@
       "metadata": {
         "id": "S6ziKzakdIpw"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -283,7 +269,7 @@
         "id": "RophsIVEdOCr",
         "outputId": "4087b100-cc30-4e3f-c759-6b025614973a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -648,7 +634,7 @@
         "id": "SLg3lZ0zdUNO",
         "outputId": "295bdadb-2fea-4db7-b051-e864af514291"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -958,7 +944,7 @@
         "id": "1yn23CmDdgIR",
         "outputId": "d1df08d0-fed0-4ac1-9270-2f75b673455b"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1319,7 +1305,7 @@
         "id": "8EX0pMH2divf",
         "outputId": "d1c9d468-c269-43f3-bb23-f9d6c5833afe"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1388,7 +1374,7 @@
       "metadata": {
         "id": "0Y8rDka1dsW3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1403,7 +1389,7 @@
         "id": "wyFxjVEmduQd",
         "outputId": "11aa6906-46fd-403f-9d21-2be70ed0b600"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1425,7 +1411,7 @@
       "metadata": {
         "id": "LfeeBckldx0x"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1440,7 +1426,7 @@
         "id": "gw9JJHW1d1lV",
         "outputId": "3be02f2e-d70f-46e1-d2f9-da431eab6e79"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1471,7 +1457,7 @@
       "metadata": {
         "id": "f8Xt713Kd6Iv"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1486,7 +1472,7 @@
         "id": "stcG8bTbeFvY",
         "outputId": "5c1c2654-3083-4cd7-f06f-3765ca3ebd59"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
